Source/WebCore/platform/audio/mac/MediaSessionManagerMac.mm
@@ -56,7 +56,7 @@ PlatformMediaSessionManager* PlatformMediaSessionManager::sharedManagerIfExists(
 void PlatformMediaSessionManager::updateNowPlayingInfoIfNecessary()
 {
     if (auto existingManager = (MediaSessionManagerMac *)PlatformMediaSessionManager::sharedManagerIfExists())
-        existingManager->updateNowPlayingInfo();
+        existingManager->scheduleUpdateNowPlayingInfo();
 }
 
 MediaSessionManagerMac::MediaSessionManagerMac()
@@ -69,6 +69,12 @@ MediaSessionManagerMac::~MediaSessionManagerMac()
 {
 }
 
+void MediaSessionManagerMac::scheduleUpdateNowPlayingInfo()
+{
+    if (!m_nowPlayingUpdateTaskQueue.hasPendingTasks())
+        m_nowPlayingUpdateTaskQueue.enqueueTask(std::bind(&MediaSessionManagerMac::updateNowPlayingInfo, this));
+}
+
 bool MediaSessionManagerMac::sessionWillBeginPlayback(PlatformMediaSession& session)
 {
     if (!PlatformMediaSessionManager::sessionWillBeginPlayback(session))
@@ -77,6 +83,11 @@ bool MediaSessionManagerMac::sessionWillBeginPlayback(PlatformMediaSession& sess
     LOG(Media, "MediaSessionManagerMac::sessionWillBeginPlayback");
     updateNowPlayingInfo();
     return true;
+}
+
+void MediaSessionManagerMac::sessionDidEndRemoteScrubbing(const PlatformMediaSession&)
+{
+    scheduleUpdateNowPlayingInfo();
 }
 
 void MediaSessionManagerMac::removeSession(PlatformMediaSession& session)
@@ -123,9 +134,6 @@ void MediaSessionManagerMac::updateNowPlayingInfo()
             LOG(Media, "MediaSessionManagerMac::updateNowPlayingInfo - clearing now playing info");
             MRMediaRemoteSetNowPlayingInfo(nullptr);
             m_nowPlayingActive = false;
-            m_reportedTitle = "";
-            m_reportedRate = 0;
-            m_reportedDuration = 0;
             MRMediaRemoteSetNowPlayingApplicationPlaybackStateForOrigin(MRMediaRemoteGetLocalOrigin(), kMRPlaybackStateStopped, dispatch_get_main_queue(), ^(MRMediaRemoteError error) {
 #if LOG_DISABLED
                 UNUSED_PARAM(error);
@@ -146,16 +154,6 @@ void MediaSessionManagerMac::updateNowPlayingInfo()
     String title = currentSession->title();
     double duration = currentSession->duration();
     double rate = currentSession->state() == PlatformMediaSession::Playing ? 1 : 0;
-    if (m_reportedTitle == title && m_reportedRate == rate && m_reportedDuration == duration) {
-        m_nowPlayingActive = true;
-        LOG(Media, "MediaSessionManagerMac::updateNowPlayingInfo - nothing new to show");
-        return;
-    }
-
-    m_reportedRate = rate;
-    m_reportedDuration = duration;
-    m_reportedTitle = title;
-
     auto info = adoptCF(CFDictionaryCreateMutable(kCFAllocatorDefault, 4, &kCFTypeDictionaryKeyCallBacks, &kCFTypeDictionaryValueCallBacks));
 
     if (!title.isEmpty())
